updated logo webp, renamed project json name and title in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cedrick13bienvenue</title>
+    <title>cedrick-bienvenue</title>
   </head>
   <body>
     <div id="root"></div>
