Adding a name on meta description content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Backend & DevOps Engineer crafting robust APIs and automating deployments. I help teams build scalable, secure, maintainable, and efficient systems.">
+    <meta name="description" content="Cedrick Bienvenue – Backend & DevOps Engineer crafting robust APIs and automating deployments. I help teams build scalable, secure, maintainable, and efficient systems.">
     <title>cedrick-bienvenue</title>
     <link rel="icon" href="./src/assets/icon.jpeg" type="image/x-icon">
   </head>
